--- a/busca_lar/src/app/globals.css
+++ b/busca_lar/src/app/globals.css
@@ -116,14 +116,24 @@ img {
 .galeria {
   display: flex;
   flex-wrap: wrap;
-  gap: 1rem;
+  gap: 1.5rem;
   justify-content: center;
   margin-top: 1rem;
+  padding: 1rem 0;
+
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.galeria li {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .galeria img {
-  width: 200px;
-  height: auto;
+  border: 2px solid black;
   border-radius: 10px;
   object-fit: cover;
   transition: transform 0.3s ease;
@@ -133,6 +143,56 @@ img {
   transform: scale(1.05);
 }
 
+.pet-card {
+  width: 200px; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  border: 2px solid black; 
+  border-radius: 10px;
+  overflow: hidden;
+  transition: transform 0.3s ease;
+  background-color: white;
+  padding-bottom: 0.8rem;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+  margin-bottom: 1rem;
+}
+
+.pet-card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+}
+
+.pet-card-image-wrapper {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  border-bottom: 1px solid #eee;
+}
+
+.pet-card-name {
+  margin-top: 1rem;
+  font-size: 1.2rem;
+  color: #0a0a0a;
+  font-weight: bold;
+  padding: 0 0.5rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 90%;
+}
+
 section {
-  padding-bottom: 2rem; 
+  padding-bottom: 2rem;
+  padding-top: 1rem;
+}
+
+section h3 {
+  margin-bottom: 1.5rem;
+  text-align: center;
+  color: #000000 !important;
 }
